Wed Dec 31 08:12:12 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/client/Barrier_Client.h:
        * cuts/utils/barrier/client/Barrier_Client.cpp:

          . Refactored the code.

Wed Dec 31 08:00:28 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/barrier.idl:
        * cuts/utils/barrier/client/Barrier_Client.h:
        * cuts/utils/barrier/client/Barrier_Client.cpp:
        * cuts/utils/barrier/server/Barrier_Server.cpp:
        * cuts/utils/barrier/server/Barrier_i.h:
        * cuts/utils/barrier/server/Barrier_i.cpp:

          . The host/client specifies an unique name when registering with
            the barrier.

          . Bug fix where Ctrl+C the barrier failed to abort registered
            clients.

          . Bug fix where registering duplicate names resulted in a
            segfault in the barrier client application.

Wed Dec 31 06:53:50 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/server/Barrier_i.h:
        * cuts/utils/barrier/server/Barrier_i.cpp:

          . Protected the register_client () method with a thread mutex
            just in case there is a race condition. This should not be
            the case, however, since the object is activated under the
            RootPOA, which should be single-threaded by default.

Wed Dec 31 05:46:36 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/server/Barrier_i.cpp:

          . Bug fix where broadcast () did not remove the clients from
            its collection. This mean the close () method was signaling
            non-existent clients.

Wed Dec 31 03:10:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Node_Daemon.idl:
        * cuts/utils/Node_Daemon/Node_Daemon_Server.cpp:
        * cuts/utils/Node_Daemon/Node_Daemon_i.cpp:
        * cuts/utils/Node_Daemon/Node_File_Reader.h: