@@ -1,3 +1,12 @@
+Wed Dec 31 08:23:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/barrier/client/Barrier_Client.cpp:
+        * cuts/utils/barrier/server/Barrier_i.cpp:
+
+          . Bug fix where the barrier failed to duplicate the callback's
+            reference. This resulted in invalid reference in the server, and
+            prevented it from signaling the nodes.
+
 Wed Dec 31 08:12:12 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/utils/barrier/client/Barrier_Client.h:
